@@ -5008,4 +5008,6 @@
 	  Was checking if the wrong pointer was NULL (2013-6-18).
 	* arch/arm/src/kl/kl_spi.c and chip/kl_spi.h:  Add SPI driver and
 	  register definitions for the Freescale KL25Z (2013-6-19).
+	* arm/src/sam34/chip/sam4l_lcdca.h:  Register definition file for
+	  the SAM4l LCD peripheral (2013-6-19).
 
